--- a/movie_ticket/contact.html
+++ b/movie_ticket/contact.html
@@ -127,11 +127,7 @@
 <body>
   <header>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about-us.html">About Us</a>
-      <a href="contact.html">Contact</a>
-      <a href="faq.html">FAQ</a>
-      <a href="terms.html">Terms & Conditions</a>
+      <a href="header.php"></a>
     </nav>
   </header>
 
