customized the home page and created better visual

--- a/movie_ticket/about-us.html
+++ b/movie_ticket/about-us.html
@@ -186,7 +186,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 MovieX. All rights reserved.</p>
+    <p>&copy; 2024 Phoenix Cinema. All rights reserved.</p>
   </footer>
 
 </body>
